--- a/development/my_portfolio/package.json
+++ b/development/my_portfolio/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.24",
+    "bootstrap": "^5.2.0-beta1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -53,7 +54,6 @@
     "@typescript-eslint/parser": "^5.28.0",
     "babel-plugin-styled-components": "^2.0.7",
     "css-loader": "^6.7.1",
-    "prettier": "^2.3.1",
     "eslint": "^8.17.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -61,6 +61,7 @@
     "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.3.1"
   }
 }
