--- a/development/my_portfolio/package.json
+++ b/development/my_portfolio/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.24",
     "bootstrap": "^5.2.0-beta1",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-player": "^2.10.1",
     "react-redux": "^8.0.2",
