--- a/development/my_portfolio/package.json
+++ b/development/my_portfolio/package.json
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
